Computed at program start all knight's inside chessboard squares and moved this code to Board.